remove forward slash

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <h1>Hello Campers, foo!</h1>
         <div id='tetris'>
         </div>
-        <script src='/bundle.js'></script>
+        <script src='bundle.js'></script>
     </body>
 </html>
