--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title></title>
     </head>
     <body>
-        <h1>Hello Campers, foo!</h1>
+        <h1>Hello Campers, lets play some tetris!</h1>
         <div id='tetris'>
         </div>
         <script src='bundle.js'></script>
